# clg

./: CMakeLists.txt  README.txt  clg_run.sh
article/latex/: clgDescription.tex  clgReferences.bib
images/: dot_d0.tif  dot_d3.tif
src/: CMakeLists.txt  clg_of.c  test_rgb2gray.c  test_swaptiff.c
