PROJECT(clg)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(CMAKE_C_FLAGS "-std=c99")
SET(PROJECT_SOURCE_DIR src)
SET(PROJECT_BINARY_DIR bin)
 
FIND_PACKAGE(TIFF)
IF(TIFF_FOUND)
   include_directories(${TIFF_INCLUDE_DIR})
   #  link_directories(${TIFF_LIBRARY})
   SET( LIBS ${LIBS} ${TIFF_LIBRARIES})
ENDIF()

FIND_PACKAGE(JPEG)
if(JPEG_FOUND)
   include_directories(${JPEG_INCLUDE_DIR})
   # link_directories(${JPEG_LIBRARY})
   SET( LIBS ${LIBS} ${JPEG_LIBRARIES})
ENDIF()

FIND_PACKAGE(PNG)
IF(PNG_FOUND)
   include_directories(${PNG_INCLUDE_DIR})
   #  link_directories(${PNG_LIBRARY})
   SET( LIBS ${LIBS} ${PNG_LIBRARIES})
ENDIF()

MESSAGE("libraries: ${LIBS}")

ADD_SUBDIRECTORY(src)
MESSAGE("standard libraries: ${LIBS}")
MESSAGE("custom libraries: ${E_LIBS}")

ADD_EXECUTABLE(${PROJECT_BINARY_DIR}/test_rgb2gray ${PROJECT_SOURCE_DIR}/test_rgb2gray.c)
ADD_EXECUTABLE(${PROJECT_BINARY_DIR}/test_swaptiff ${PROJECT_SOURCE_DIR}/test_swaptiff.c)
ADD_EXECUTABLE(${PROJECT_BINARY_DIR}/clg_of ${PROJECT_SOURCE_DIR}/clg_of.c)

TARGET_LINK_LIBRARIES(${PROJECT_BINARY_DIR}/test_rgb2gray ${E_LIBS} ${LIBS})
TARGET_LINK_LIBRARIES(${PROJECT_BINARY_DIR}/test_swaptiff ${E_LIBS} ${LIBS})
TARGET_LINK_LIBRARIES(${PROJECT_BINARY_DIR}/clg_of ${E_LIBS} ${LIBS})

INSTALL(TARGETS ${PROJECT_BINARY_DIR}/test_rgb2gray RUNTIME DESTINATION bin)
INSTALL(TARGETS ${PROJECT_BINARY_DIR}/test_swaptiff RUNTIME DESTINATION bin)
INSTALL(TARGETS ${PROJECT_BINARY_DIR}/clg_of RUNTIME DESTINATION bin)
